--- a/surveys_plots_all_2.html
+++ b/surveys_plots_all_2.html
@@ -113,21 +113,24 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
     <h2 id="toc-title">Table of contents</h2>
    
   <ul>
-  <li><a href="#moodle-survey" id="toc-moodle-survey" class="nav-link active" data-scroll-target="#moodle-survey"><span class="toc-section-number">1</span>  Moodle survey</a></li>
-  <li><a href="#load-data-and-pairwise-t.test" id="toc-load-data-and-pairwise-t.test" class="nav-link" data-scroll-target="#load-data-and-pairwise-t.test"><span class="toc-section-number">2</span>  Load data and pairwise t.test</a></li>
-  <li><a href="#boxplots" id="toc-boxplots" class="nav-link" data-scroll-target="#boxplots"><span class="toc-section-number">3</span>  Boxplots</a></li>
-  <li><a href="#likert-scale-plots" id="toc-likert-scale-plots" class="nav-link" data-scroll-target="#likert-scale-plots"><span class="toc-section-number">4</span>  Likert scale plots</a>
+  <li><a href="#contents-and-disclaimer" id="toc-contents-and-disclaimer" class="nav-link active" data-scroll-target="#contents-and-disclaimer"><span class="toc-section-number">1</span>  Contents and Disclaimer</a></li>
+  <li><a href="#moodle-survey" id="toc-moodle-survey" class="nav-link" data-scroll-target="#moodle-survey"><span class="toc-section-number">2</span>  Moodle survey</a></li>
+  <li><a href="#load-data-and-pairwise-t.test" id="toc-load-data-and-pairwise-t.test" class="nav-link" data-scroll-target="#load-data-and-pairwise-t.test"><span class="toc-section-number">3</span>  Load data and pairwise t.test</a></li>
+  <li><a href="#boxplots" id="toc-boxplots" class="nav-link" data-scroll-target="#boxplots"><span class="toc-section-number">4</span>  Boxplots</a></li>
+  <li><a href="#likert-scale-plots" id="toc-likert-scale-plots" class="nav-link" data-scroll-target="#likert-scale-plots"><span class="toc-section-number">5</span>  Likert scale plots</a>
   <ul class="collapse">
-  <li><a href="#general-methodology" id="toc-general-methodology" class="nav-link" data-scroll-target="#general-methodology"><span class="toc-section-number">4.1</span>  General Methodology</a></li>
-  <li><a href="#activities-length" id="toc-activities-length" class="nav-link" data-scroll-target="#activities-length"><span class="toc-section-number">4.2</span>  Activities Length</a></li>
-  <li><a href="#equipment" id="toc-equipment" class="nav-link" data-scroll-target="#equipment"><span class="toc-section-number">4.3</span>  Equipment</a></li>
-  <li><a href="#length-and-schedule" id="toc-length-and-schedule" class="nav-link" data-scroll-target="#length-and-schedule"><span class="toc-section-number">4.4</span>  Length and Schedule</a></li>
-  <li><a href="#method-objectives" id="toc-method-objectives" class="nav-link" data-scroll-target="#method-objectives"><span class="toc-section-number">4.5</span>  Method Objectives</a></li>
-  <li><a href="#activities-interest" id="toc-activities-interest" class="nav-link" data-scroll-target="#activities-interest"><span class="toc-section-number">4.6</span>  Activities Interest</a></li>
-  <li><a href="#assessment" id="toc-assessment" class="nav-link" data-scroll-target="#assessment"><span class="toc-section-number">4.7</span>  Assessment</a></li>
-  <li><a href="#learning-objectives" id="toc-learning-objectives" class="nav-link" data-scroll-target="#learning-objectives"><span class="toc-section-number">4.8</span>  Learning Objectives</a></li>
-  <li><a href="#eln" id="toc-eln" class="nav-link" data-scroll-target="#eln"><span class="toc-section-number">4.9</span>  ELN</a></li>
-  <li><a href="#session-info" id="toc-session-info" class="nav-link" data-scroll-target="#session-info"><span class="toc-section-number">4.10</span>  Session Info</a></li>
+  <li><a href="#general-methodology" id="toc-general-methodology" class="nav-link" data-scroll-target="#general-methodology"><span class="toc-section-number">5.1</span>  General Methodology</a></li>
+  <li><a href="#activities-length" id="toc-activities-length" class="nav-link" data-scroll-target="#activities-length"><span class="toc-section-number">5.2</span>  Activities Length</a></li>
+  <li><a href="#equipment" id="toc-equipment" class="nav-link" data-scroll-target="#equipment"><span class="toc-section-number">5.3</span>  Equipment</a></li>
+  <li><a href="#length-and-schedule" id="toc-length-and-schedule" class="nav-link" data-scroll-target="#length-and-schedule"><span class="toc-section-number">5.4</span>  Length and Schedule</a></li>
+  <li><a href="#method-objectives" id="toc-method-objectives" class="nav-link" data-scroll-target="#method-objectives"><span class="toc-section-number">5.5</span>  Method Objectives</a></li>
+  <li><a href="#activities-interest" id="toc-activities-interest" class="nav-link" data-scroll-target="#activities-interest"><span class="toc-section-number">5.6</span>  Activities Interest</a></li>
+  <li><a href="#assessment" id="toc-assessment" class="nav-link" data-scroll-target="#assessment"><span class="toc-section-number">5.7</span>  Assessment</a></li>
+  <li><a href="#learning-objectives" id="toc-learning-objectives" class="nav-link" data-scroll-target="#learning-objectives"><span class="toc-section-number">5.8</span>  Learning Objectives</a></li>
+  <li><a href="#eln" id="toc-eln" class="nav-link" data-scroll-target="#eln"><span class="toc-section-number">5.9</span>  ELN</a>
+  <ul class="collapse">
+  <li><a href="#session-info" id="toc-session-info" class="nav-link" data-scroll-target="#session-info"><span class="toc-section-number">5.9.1</span>  Session Info</a></li>
+  </ul></li>
   </ul></li>
   </ul>
 </nav>
@@ -165,8 +168,13 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 
 </header>
 
-<section id="moodle-survey" class="level1" data-number="1">
-<h1 data-number="1"><span class="header-section-number">1</span> Moodle survey</h1>
+<section id="contents-and-disclaimer" class="level1" data-number="1">
+<h1 data-number="1"><span class="header-section-number">1</span> Contents and Disclaimer</h1>
+<p>This file contains the data from the course “Experimental Advanced Biochemistry I” (Biochemistry Degree, <a href="https://www.uam.es">Universidad Autónoma de Madrid</a>). Surveys were filled by students in the years 2017-2022 directly on Moodle the last day of each course. This is a preliminary summary of the data analysis. The GitHub <a href="https://github.com/mredrejo/bqexav">repo</a> contains the original files from all the analyses.</p>
+<p>Data is shared under creative common license (CC BY-NC-ND 3.0 ES). Contact <a href="mailto:modesto.redrejo@uam.es">modesto.redrejo@uam.es</a> for further info.</p>
+</section>
+<section id="moodle-survey" class="level1" data-number="2">
+<h1 data-number="2"><span class="header-section-number">2</span> Moodle survey</h1>
 <p>We are importing the data from the students answers in 5 years, between 2018-2022. The quiz consists on up to 77 questions, being 5 free-text questions (50, 51, 52, 75, 76 &amp; 77), 7 three-options questions and the rest in Likert scale. The latter will be categorized as “Positive” or “Negative” if 5 (“Totally agree”) means a “good” or “bad” feedback.</p>
 <div class="cell">
 <details>
@@ -744,8 +752,8 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </div>
 </div>
 </section>
-<section id="load-data-and-pairwise-t.test" class="level1" data-number="2">
-<h1 data-number="2"><span class="header-section-number">2</span> Load data and pairwise t.test</h1>
+<section id="load-data-and-pairwise-t.test" class="level1" data-number="3">
+<h1 data-number="3"><span class="header-section-number">3</span> Load data and pairwise t.test</h1>
 <p>Survey answers were downloaded from Moodle as txt/csv files. Moodle updates generated some format differences that could be bypassed after opening the files with Numbers and exporting as tables with “;” as column separator. We now show pairwise t.tests carried out to identify significant differences per year in the answers.</p>
 <div class="cell">
 <details>
@@ -1254,8 +1262,8 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </div>
 </div>
 </section>
-<section id="boxplots" class="level1" data-number="3">
-<h1 data-number="3"><span class="header-section-number">3</span> Boxplots</h1>
+<section id="boxplots" class="level1" data-number="4">
+<h1 data-number="4"><span class="header-section-number">4</span> Boxplots</h1>
 <p>Answers from each question are displayed in Boxplots by Year and significant differences from the overall answers are marked.</p>
 <div class="cell">
 <details>
@@ -1367,11 +1375,11 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </div>
 </div>
 </section>
-<section id="likert-scale-plots" class="level1" data-number="4">
-<h1 data-number="4"><span class="header-section-number">4</span> Likert scale plots</h1>
+<section id="likert-scale-plots" class="level1" data-number="5">
+<h1 data-number="5"><span class="header-section-number">5</span> Likert scale plots</h1>
 <p>Answers in Likert scales are represented by sections in the quiz.</p>
-<section id="general-methodology" class="level2" data-number="4.1">
-<h2 data-number="4.1" class="anchored" data-anchor-id="general-methodology"><span class="header-section-number">4.1</span> General Methodology</h2>
+<section id="general-methodology" class="level2" data-number="5.1">
+<h2 data-number="5.1" class="anchored" data-anchor-id="general-methodology"><span class="header-section-number">5.1</span> General Methodology</h2>
 <div class="cell">
 <details>
 <summary>Show the code</summary>
@@ -1401,8 +1409,8 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </div>
 </div>
 </section>
-<section id="activities-length" class="level2" data-number="4.2">
-<h2 data-number="4.2" class="anchored" data-anchor-id="activities-length"><span class="header-section-number">4.2</span> Activities Length</h2>
+<section id="activities-length" class="level2" data-number="5.2">
+<h2 data-number="5.2" class="anchored" data-anchor-id="activities-length"><span class="header-section-number">5.2</span> Activities Length</h2>
 <div class="cell">
 <details>
 <summary>Show the code</summary>
@@ -1424,8 +1432,8 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </details>
 </div>
 </section>
-<section id="equipment" class="level2" data-number="4.3">
-<h2 data-number="4.3" class="anchored" data-anchor-id="equipment"><span class="header-section-number">4.3</span> Equipment</h2>
+<section id="equipment" class="level2" data-number="5.3">
+<h2 data-number="5.3" class="anchored" data-anchor-id="equipment"><span class="header-section-number">5.3</span> Equipment</h2>
 <div class="cell">
 <details>
 <summary>Show the code</summary>
@@ -1441,8 +1449,8 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </div>
 </div>
 </section>
-<section id="length-and-schedule" class="level2" data-number="4.4">
-<h2 data-number="4.4" class="anchored" data-anchor-id="length-and-schedule"><span class="header-section-number">4.4</span> Length and Schedule</h2>
+<section id="length-and-schedule" class="level2" data-number="5.4">
+<h2 data-number="5.4" class="anchored" data-anchor-id="length-and-schedule"><span class="header-section-number">5.4</span> Length and Schedule</h2>
 <div class="cell">
 <details>
 <summary>Show the code</summary>
@@ -1457,8 +1465,8 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </div>
 </div>
 </section>
-<section id="method-objectives" class="level2" data-number="4.5">
-<h2 data-number="4.5" class="anchored" data-anchor-id="method-objectives"><span class="header-section-number">4.5</span> Method Objectives</h2>
+<section id="method-objectives" class="level2" data-number="5.5">
+<h2 data-number="5.5" class="anchored" data-anchor-id="method-objectives"><span class="header-section-number">5.5</span> Method Objectives</h2>
 <div class="cell">
 <details>
 <summary>Show the code</summary>
@@ -1473,8 +1481,8 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </div>
 </div>
 </section>
-<section id="activities-interest" class="level2" data-number="4.6">
-<h2 data-number="4.6" class="anchored" data-anchor-id="activities-interest"><span class="header-section-number">4.6</span> Activities Interest</h2>
+<section id="activities-interest" class="level2" data-number="5.6">
+<h2 data-number="5.6" class="anchored" data-anchor-id="activities-interest"><span class="header-section-number">5.6</span> Activities Interest</h2>
 <div class="cell">
 <details>
 <summary>Show the code</summary>
@@ -1490,8 +1498,8 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </div>
 </div>
 </section>
-<section id="assessment" class="level2" data-number="4.7">
-<h2 data-number="4.7" class="anchored" data-anchor-id="assessment"><span class="header-section-number">4.7</span> Assessment</h2>
+<section id="assessment" class="level2" data-number="5.7">
+<h2 data-number="5.7" class="anchored" data-anchor-id="assessment"><span class="header-section-number">5.7</span> Assessment</h2>
 <div class="cell">
 <details>
 <summary>Show the code</summary>
@@ -1507,8 +1515,8 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </div>
 </div>
 </section>
-<section id="learning-objectives" class="level2" data-number="4.8">
-<h2 data-number="4.8" class="anchored" data-anchor-id="learning-objectives"><span class="header-section-number">4.8</span> Learning Objectives</h2>
+<section id="learning-objectives" class="level2" data-number="5.8">
+<h2 data-number="5.8" class="anchored" data-anchor-id="learning-objectives"><span class="header-section-number">5.8</span> Learning Objectives</h2>
 <div class="cell">
 <details>
 <summary>Show the code</summary>
@@ -1524,8 +1532,8 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </div>
 </div>
 </section>
-<section id="eln" class="level2" data-number="4.9">
-<h2 data-number="4.9" class="anchored" data-anchor-id="eln"><span class="header-section-number">4.9</span> ELN</h2>
+<section id="eln" class="level2" data-number="5.9">
+<h2 data-number="5.9" class="anchored" data-anchor-id="eln"><span class="header-section-number">5.9</span> ELN</h2>
 <div class="cell">
 <details>
 <summary>Show the code</summary>
@@ -1543,9 +1551,8 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <p><img src="surveys_plots_all_2_files/figure-html/Fig10-1.png" class="img-fluid" width="672"></p>
 </div>
 </div>
-</section>
-<section id="session-info" class="level2" data-number="4.10">
-<h2 data-number="4.10" class="anchored" data-anchor-id="session-info"><span class="header-section-number">4.10</span> Session Info</h2>
+<section id="session-info" class="level3" data-number="5.9.1">
+<h3 data-number="5.9.1" class="anchored" data-anchor-id="session-info"><span class="header-section-number">5.9.1</span> Session Info</h3>
 <div class="cell">
 <details>
 <summary>Show the code</summary>
@@ -1594,6 +1601,7 @@ loaded via a namespace (and not attached):
 [73] xfun_0.36         </code></pre>
 </div>
 </div>
+</section>
 </section>
 </section>
 
