--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Modesto">
-<meta name="dcterms.date" content="2023-05-08">
+<meta name="dcterms.date" content="2023-05-10">
 
 <title>BqExAvI Survey Analysis (2017-2022)</title>
 <style>
@@ -129,6 +129,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
   <li><a href="#eln" id="toc-eln" class="nav-link" data-scroll-target="#eln"><span class="toc-section-number">4.9</span>  ELN</a></li>
   </ul></li>
   <li><a href="#open-questions" id="toc-open-questions" class="nav-link" data-scroll-target="#open-questions"><span class="toc-section-number">5</span>  Open questions</a></li>
+  <li><a href="#acknowledgments" id="toc-acknowledgments" class="nav-link" data-scroll-target="#acknowledgments"><span class="toc-section-number">6</span>  Acknowledgments</a></li>
   </ul>
 </nav>
 </div>
@@ -155,7 +156,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">May 8, 2023</p>
+      <p class="date">May 10, 2023</p>
     </div>
   </div>
   
@@ -167,8 +168,25 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 
 <section id="contents-and-disclaimer" class="level1" data-number="1">
 <h1 data-number="1"><span class="header-section-number">1</span> Contents and Disclaimer</h1>
-<p>This file contains the data from the “Experimental Advanced Biochemistry I” course (Biochemistry Degree, <a href="https://www.uam.es">Universidad Autónoma de Madrid</a>). The questionnaires were completed by the students in 2017-2022 directly on Moodle on the last day of each course. This is a preliminary summary of the data analysis. The GitHub <a href="https://github.com/mredrejo/bqexav">repo</a> contains the original files of all analyzes. This report only contains the data analysis and plots, without any results discussion.</p>
-<p>The data is made available under the Creative Common License (CC BY-NC-ND 3.0 ES). Contact <a href="mailto:modesto.redrejo@uam.es">modesto.redrejo@uam.es</a> for more information.</p>
+<div class="cell">
+
+</div>
+<p>This file contains the data from the “Experimental Advanced Biochemistry I” course (Biochemistry Degree, <a href="https://www.uam.es">Universidad Autónoma de Madrid</a>). Over the last years, a number of lecturers and professors from the <a href="https://www.bq.uam.es/Index.php">Biochemistry Department</a> have participated in this course, as follows (in alphabetical order): Julián Aragonés, Juan J. Arredondo, Víctor Calvo, José G. Castaño, Alicia González, Benilde Jiménez, Marina Lasa, Óscar Martínez-Costa, Luis del Peso, Modesto Redrejo-Rodríguez, Ana I. Rojo, Alejandro Samhan-Arias, and Isabel Sánchez-Pérez.</p>
+<p>The questionnaires were completed by the students in 2017-2022 directly on Moodle on the last day of each course. This is a preliminary summary of the data analysis. The GitHub <a href="https://github.com/mredrejo/bqexav">repo</a> contains the original files of all analyzes. This report only contains the data analysis and plots, without any results discussion. The companion manuscript will be available soon.</p>
+<p>The data is made available under the Creative Common License (CC BY-NC-ND 3.0 ES).</p>
+<div class="callout-warning callout callout-style-default callout-captioned">
+<div class="callout-header d-flex align-content-center">
+<div class="callout-icon-container">
+<i class="callout-icon"></i>
+</div>
+<div class="callout-caption-container flex-fill">
+Preliminary
+</div>
+</div>
+<div class="callout-body-container callout-body">
+<p>This is only a preliminary analysis. Contact <a href="mailto:modesto.redrejo@uam.es">modesto.redrejo@uam.es</a> or <a href="mailto:juan.arrredondo@uam.es">juan.arredondo@uam.es</a> for any feedback or queries.</p>
+</div>
+</div>
 </section>
 <section id="moodle-survey" class="level1" data-number="2">
 <h1 data-number="2"><span class="header-section-number">2</span> Moodle survey</h1>
@@ -8679,8 +8697,12 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <section id="open-questions" class="level1" data-number="5">
 <h1 data-number="5"><span class="header-section-number">5</span> <a href="surveys_free_text.html">Open questions</a></h1>
 <p>Free-text questions have been analyzed independently by automatic text <em>lemmatization</em> and plot methods. The detailed report can be found <a href="surveys_free_text.html">here</a>.</p>
-<section id="session-info" class="level3" data-number="5.0.1">
-<h3 data-number="5.0.1" class="anchored" data-anchor-id="session-info"><span class="header-section-number">5.0.1</span> Session Info</h3>
+</section>
+<section id="acknowledgments" class="level1" data-number="6">
+<h1 data-number="6"><span class="header-section-number">6</span> Acknowledgments</h1>
+<p>This work has been supported by UAM Teaching Innovation Grants (M-015.17-INN, M-020.18-IMP, M_002.19_INN and M_009.20_IMP).</p>
+<section id="session-info" class="level3" data-number="6.0.1">
+<h3 data-number="6.0.1" class="anchored" data-anchor-id="session-info"><span class="header-section-number">6.0.1</span> Session Info</h3>
 <div class="cell">
 <details>
 <summary>Show the code</summary>
